#
# The MIT License
#
# Copyright (c) 2013-2014 Callaghan Innovation, New Zealand
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.
#

add_subdirectory(OS) 
add_subdirectory(Basis)
add_subdirectory(Containers) 
add_subdirectory(DataArchive) 
add_subdirectory(Datatypes) 
add_subdirectory(Exceptions) 
add_subdirectory(GeometryPiece) 
add_subdirectory(Grid) 
add_subdirectory(Labels) 
add_subdirectory(IO) 
#add_subdirectory(Lockfree) 
add_subdirectory(Malloc) 
add_subdirectory(Math) 
add_subdirectory(Parallel) 
add_subdirectory(Persistent) 
add_subdirectory(ProblemSpec) 
add_subdirectory(Thread) 
add_subdirectory(Tracker) 
add_subdirectory(Util) 
